Start modal overflow fix

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -6,15 +6,17 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.205);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow-y: auto;
 }
 
 .modal-content {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 0);
     background-color: white;
     width: 600px;
-    height: 350px;
+    min-height: 350px;
     padding: 30px;
     border-radius: 5px;
     box-shadow: 2px 1px 10px rgba(111, 111, 111, 0.6);
@@ -27,7 +29,6 @@
 .modal-content--uncentered {
     display: block;
     width: 700px;
-    overflow-y: auto;
     overflow-x: hidden;
 }
 
